group 'keyron'
version '0.1-SNAPSHOT'


buildscript {
    ext {
        kotlinVersion = '1.3.21'
        kotlinCoroutinesVersion = '1.1.1'
        springBootVersion = '2.0.5.RELEASE'
        camelVersion = '2.22.1'
        activemqVersion = '5.15.4'
        seleniumVersion = '3.14.0'
        hazelcastVersion = '3.10.5'
        neo4jOgmVersion = '3.1.2'
        springDataNeo4j = '5.0.10.RELEASE' //'5.0.2.RELEASE' non si può usare a causa di spring boot
        springCore = '5.0.9.RELEASE'
        mongoVersion = '2.0.10.RELEASE'
    }

    repositories {
        mavenCentral()
    }

    dependencies {
        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
        classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
        classpath "org.jetbrains.kotlin:kotlin-allopen:$kotlinVersion"
    }

}

apply plugin: "kotlin"
apply plugin: "kotlin-spring"
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'

sourceCompatibility = 1.8

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileJava {
    options.compilerArgs += ["--add-modules", "java.xml.bind"]
    options.compilerArgs += ["--add-modules", 'jdk.internal.org.xml.sax']
    options.compilerArgs += ["--add-opens", "java.base/java.lang=ALL-UNNAMED"]
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

repositories {
    mavenCentral()
    maven { url = "https://repo.spring.io/milestone" }
    jcenter()
}

jar {
    manifest {
        attributes 'Description': 'Nightcrawler october 2017'
        attributes  'Main-Class' : 'nightcrawler.ApplicationNightcrawlerKt'
    }
}


dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    testCompile "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"

    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"

    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"

    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'


    compile group: 'org.jetbrains.kotlin', name: 'kotlin-reflect', version: "$kotlinVersion"

    compile "org.springframework.boot:spring-boot:$springBootVersion"
    compile "org.springframework.boot:spring-boot-starter-actuator:$springBootVersion"
    compile "org.springframework.boot:spring-boot-configuration-processor:$springBootVersion"
    compile "org.springframework.boot:spring-boot-starter-test:$springBootVersion"
    compile "org.springframework.boot:spring-boot-starter-aop:$springBootVersion"
    compile "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"


    compile group: 'org.springframework.data', name: 'spring-data-neo4j', version:"$springDataNeo4j"
    compile group: 'org.neo4j', name: 'neo4j-ogm-bolt-driver', version: "$neo4jOgmVersion"
    compile group: 'org.neo4j', name: 'neo4j-ogm-api', version:  "$neo4jOgmVersion"
    compile group: 'org.neo4j', name: 'neo4j-ogm-http-driver', version:  "$neo4jOgmVersion"
    compile group: 'org.neo4j', name: 'neo4j-ogm-core', version:  "$neo4jOgmVersion"
    compile group: 'org.springframework.data', name: 'spring-data-commons', version: "$mongoVersion"
    compile group: 'org.springframework.data', name: 'spring-data-mongodb', version: "$mongoVersion"
    // compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.6.0'

    compile group: 'org.springframework', name: 'spring-core', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-context', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-beans', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-aop', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-jms', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-test', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-expression', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-tx', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-messaging', version: "$springCore"
    compile group: 'org.springframework', name: 'spring-framework-bom', version: "$springCore"

    compile "org.apache.camel:camel-core:$camelVersion"
    compile "org.apache.camel:camel-jackson:$camelVersion"
    compile "org.apache.camel:camel-cxf:$camelVersion"
    compile group: 'org.apache.camel', name: 'camel-spring-boot', version: "$camelVersion"
    compile group: 'org.apache.camel', name: 'camel-quartz2', version: "$camelVersion"
    compile group: 'org.apache.camel', name: 'camel-spring', version: "$camelVersion"
    compile group: 'org.apache.camel', name: 'camel-spring-javaconfig', version: "$camelVersion"
    compile group: 'org.apache.camel', name: 'camel-jms', version: "$camelVersion"

    compile "org.apache.activemq:activemq-spring:$activemqVersion"
    compile "org.apache.activemq:activemq-camel:$activemqVersion"
    compile "org.apache.activemq:activemq-client:$activemqVersion"

    compile "com.typesafe:config:1.3.2" //required for json config

    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-safari-driver', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-firefox-driver', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-ie-driver', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version: "$seleniumVersion"
    compile group: 'org.seleniumhq.selenium', name: 'htmlunit-driver', version: '2.28.2'


    compile group: 'com.codeborne', name: 'phantomjsdriver', version: '1.3.0'

    compile group: 'org.jsoup', name: 'jsoup', version: '1.10.2'
    compile group: 'com.google.guava', name: 'guava', version: '23.0'
    compile group: 'com.sun.mail', name: 'javax.mail', version: '1.5.5'
    compile group: 'com.sun.jersey', name: 'jersey-client', version: '1.19.3'

    compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.2.0'

    compile group: 'org.objenesis', name: 'objenesis', version: '2.4'
    //compile group: 'com.querydsl', name: 'querydsl-mongodb', version: '4.1.3'

    compile group: 'com.hazelcast', name: 'hazelcast', version: "$hazelcastVersion"
    compile group: 'com.hazelcast', name: 'hazelcast-spring', version: "$hazelcastVersion"

    compile group: 'com.assertthat', name: 'selenium-shutterbug', version: '0.4'
    
    compile group: 'org.apache.tika', name: 'tika', version: '1.14'
    compile group: 'org.apache.tika', name: 'tika-parsers', version: '1.14'

    compile group: 'org.twitter4j', name: 'twitter4j-core', version: '4.0.6'

    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
    compile group: 'javax.xml.soap', name: 'javax.xml.soap-api', version: '1.4.0'
}


